--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -1,9 +1,9 @@
 #define STR_HELPER(x) #x
 #define STR(x) STR_HELPER(x)
 
-#define PROJECT_NAME "TurtleCoin"
-#define PROJECT_SITE "http://www.turtlecoin.lol"
-#define PROJECT_COPYRIGHT "Copyright 2018-2019, The TurtleCoin Developers"
+#define PROJECT_NAME "ePesa"
+#define PROJECT_SITE "#"
+#define PROJECT_COPYRIGHT "Copyright 2018-2019, The ePesa developers"
 #define APP_VER_MAJOR 0
 #define APP_VER_MINOR 14
 #define APP_VER_REV 7
